# idp_test

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
.claude/: settings.json
docs/: PRD.md
frontend/: index.html  package.json  setup.ps1  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/ui/: select.tsx
frontend/src/lib/: api.ts
src/property_intel/: config.py  hashing.py  logging_setup.py
src/property_intel/agents/: __init__.py  base.py  comparison.py  compliance.py  document_analyst.py  report.py  research.py  router.py  tools.py
src/property_intel/api/: app.py  schemas.py
src/property_intel/copilot/: __main__.py  context_builder.py  llm_client.py  prompts.py  service.py
src/property_intel/db/: models.py  repository.py  session.py
src/property_intel/enterprise/: __init__.py  alerts.py  audit.py  drive_sync.py  rbac.py  versioning.py
src/property_intel/evaluation/: __init__.py  dataset.py  deepeval_eval.py  pipeline.py  ragas_eval.py  tracer.py
src/property_intel/ingestion/: organizer.py
src/property_intel/metadata/: schema.py
src/property_intel/parsing/: base.py  docling_parser.py  markitdown_parser.py  router.py
src/property_intel/pipeline/: __main__.py  batch_processor.py
src/property_intel/registry/: state_machine.py
src/property_intel/retrieval/: __main__.py  chunking.py  embeddings.py  hybrid_search.py  models.py  reranker.py  semantic_search.py  service.py  vector_store.py
src/property_intel/search/: __main__.py  bm25.py  fulltext.py  metadata_search.py  schema.py  service.py
tests/: conftest.py  test_task10_logging.py  test_task11_search_indexing.py  test_task12_search_schema.py  test_task13_fulltext_search.py  test_task14_bm25_search.py  test_task15_metadata_search.py  test_task16_search_service.py  test_task18_chunking.py  test_task19_embeddings.py  test_task1_repo_bootstrap.py  test_task20_qdrant.py  test_task21_semantic_search.py  test_task22_hybrid_search.py  test_task23_reranker.py  test_task24_retrieval_service.py  test_task26_llm_client.py  test_task27_context_builder.py  test_task28_prompts.py  test_task29_copilot_service.py  test_task2_dataset_organization.py  test_task30_api.py  test_task31_copilot_cli.py  test_task32_agent_base.py  test_task33_document_analyst.py  test_task34_comparison_agent.py  test_task35_compliance_agent.py  test_task36_research_agent.py  test_task37_report_agent.py  test_task38_router.py  test_task39_eval_dataset.py  test_task3_metadata_schema.py  test_task40_agent_api.py  test_task40_ragas_eval.py  test_task41_deepeval_eval.py  test_task41_rbac_middleware.py  test_task42_tracer.py  test_task43_pipeline.py  test_task44_rbac.py  test_task45_audit.py  (+9 more)
tests/fixtures/: make_sample_pdfs.py
