[project]
name = "property-intel"
version = "0.1.0"
description = "Property & Regulatory Document Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.0.0",
    "markitdown[pdf]>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.6.0",
    "reportlab>=4.0.0",
]

[project.scripts]
property-intel-batch = "property_intel.pipeline.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/property_intel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (Docling model downloads, etc.)",
    "db: marks tests that require a live PostgreSQL connection",
    "integration: marks tests that require the real data/raw dataset",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
